#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT([c++-collections],
	[1.0.0],
	[paolorovelli@yahoo.it])
AM_INIT_AUTOMAKE([c++-collections],1.0.0)

LT_INIT([disable-static])

# Checks for programs.
AC_PROG_CXX([g++])
AC_PROG_LIBTOOL
AM_PATH_CPPUNIT(1.9.6)

# Checks for libraries.

# Checks for source files.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_LANG([C++])

# Checks for library functions.

# Configuration files (makefiles).
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_FILES([Makefile src/Makefile tests/Makefile])
AC_OUTPUT

