ACLOCAL_AMFLAGS = -I m4
AM_CXXFLAGS = -Wall -std=gnu++0x -I$(top_builddir)/include

# include_HEADERS = include/list.h include/linked-list.h

lib_LTLIBRARIES = libc++-collections.la

libc___collections_la_SOURCES = linked-list.cc array-list.cc
libc___collections_la_LDFLAGS = -no-undefined -version-info 1:0:0

